--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ img {
 #moth {
   width:600px;
   position: absolute;
+  z-index: -2;
 }
 
 #moon {
@@ -47,6 +48,7 @@ img {
   width:200px;
   left:700px;
   position: absolute;
+  z-index: -2;
 }
 
 #frog {
@@ -54,6 +56,7 @@ img {
   position: absolute;
   left: 500px;
   top: 300px;
+  z-index: -2;
 }
 #pentacle {
   width:200px;
