--- a/css/page1.css
+++ b/css/page1.css
@@ -29,15 +29,22 @@ a {
   color:black;
   text-decoration: none;
 }
+.contentbox a{
+  text-decoration: underline;
+
+}
+.contentbox a:hover {
+  color:#ff0055;
+}
 
 .flexcontainer div:hover {
-  background-color: pink;
+  background-color: #ff0055;
 }
 
 .contentcontainer {
   display: flex;
   flex-direction: column;
-  width:800px;
+  width:650px;
   position: absolute;
   left:400px;
 
@@ -46,7 +53,7 @@ a {
 }
 
 #datazine {
-  width: 400px;
+  width: 600px;
 }
 
 .contentbox {
@@ -54,7 +61,23 @@ a {
 }
 
 #nickcavegif {
-  width:400px;
+  width:600px;
+}
+#manifesto {
+  width: 600px;
 }
 
 #more1,#more2, #more3 {display: none;}
+
+
+.contentcontainer button {
+  display: inline-block;
+  background-color: grey; /* Green */
+  border: none;
+  color: black;
+  cursor: pointer;
+  /* border-radius: 50%; */
+}
+.contentcontainer button:hover {
+  background-color: #ff0055;
+}
