--- a/css/page2.css
+++ b/css/page2.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgreen;
+  background-color: white;
   text-align: center;
   margin-top: 5%;
   margin-left: 10%;
@@ -28,12 +28,18 @@ a {
   color:black;
   text-decoration: none;
 }
-
+.flexcontainer button {
+  display: inline-block;
+  background-color: grey; /* Green */
+  border: none;
+  color: black;
+  cursor: pointer;
+}
 .flexcontainer button:hover {
-  background-color: pink;
+  background-color: #ff0055;
 }
 .flexcontainer div:hover {
-  background-color: pink;
+  background-color: #ff0055;
 }
 
 #photodev {
