--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a {
 }
 
 .flexcontainer div:hover {
-  background-color: pink;
+  background-color: #ff0055;
 }
 
 img {
@@ -48,7 +48,7 @@ img {
   width:200px;
   left:700px;
   position: absolute;
-  z-index: -2;
+  z-index: -4;
 }
 
 #frog {
@@ -57,4 +57,23 @@ img {
   left: 500px;
   top: 300px;
   z-index: -2;
+}
+
+#pinkblock {
+  position: absolute;
+  background-color: #ff0055;
+  opacity: 0.5;
+  width:300px;
+  height: 400px;
+  left:800px;
+  top: 100px;
+  overflow:auto;
+  /* z-index: -3; */
+}
+
+
+#dude {
+  position: absolute;
+  left:300px;
+  width:600px;
 }
