--- a/css/page1.css
+++ b/css/page1.css
@@ -1,6 +1,6 @@
 body {
-  background-color: lavender;
-  text-align: center;
+  background-color: white;
+  text-align: left;
   margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
@@ -12,15 +12,16 @@ body {
   display: flex;
   position: fixed;
   flex-direction: column;
-  background-color: grey;
 }
 
-#box {
-  width: 10%;
-  height: 5%;
+.box {
+  width: 100%;
+  height: 3%;
+  margin: 1px;
+}
+span {
   background-color: grey;
 }
-
 div {
    /* border: 1px solid red; */
 }
@@ -29,16 +30,12 @@ a {
   color:black;
   text-decoration: none;
 }
-.contentbox a{
-  text-decoration: underline;
 
-}
-.contentbox a:hover {
-  color:#ff0055;
-}
-
-.flexcontainer div:hover {
+.flexcontainer span:hover {
   background-color: #ff0055;
+}
+.flexcontainer a:hover{
+  color:#ff0055;
 }
 
 .contentcontainer {
@@ -51,6 +48,14 @@ a {
   text-align: left;
   font-family: 'Roboto Slab', serif;
 }
+
+.contentbox a{
+  text-decoration: underline;
+}
+.contentbox a:hover {
+  color:#ff0055;
+}
+
 
 #datazine {
   width: 600px;
