--- a/css/page2.css
+++ b/css/page2.css
@@ -1,22 +1,25 @@
 body {
   background-color: white;
-  text-align: center;
+  text-align: left;
   margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
   font-size: 120%;
 }
 
+
 .flexcontainer {
   display: flex;
   position: fixed;
   flex-direction: column;
-  background-color: grey;
 }
 
-#box {
-  width: 10%;
-  height: 5%;
+.box {
+  width: 100%;
+  height: 3%;
+  margin: 1px;
+}
+span {
   background-color: grey;
 }
 
@@ -28,6 +31,16 @@ a {
   color:black;
   text-decoration: none;
 }
+
+.flexcontainer span:hover {
+  background-color: #ff0055;
+}
+.flexcontainer a:hover{
+  color:#ff0055;
+}
+
+
+/*////////////////////////////////////////*/
 .flexcontainer button {
   display: inline-block;
   background-color: grey; /* Green */
@@ -37,9 +50,7 @@ a {
 }
 .flexcontainer button:hover {
   background-color: #ff0055;
-}
-.flexcontainer div:hover {
-  background-color: #ff0055;
+  color:#ff0055;
 }
 
 #photodev {
@@ -63,4 +74,9 @@ img {
   width:300px;
   padding:50px;
 
+}
+
+#button {
+  position: absolute;
+  left:800px;
 }
