--- a/css/page3.css
+++ b/css/page3.css
@@ -1,6 +1,6 @@
 body {
-  background-color: pink;
-  text-align: center;
+  background-color: white;
+  text-align: left;
   margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
@@ -11,12 +11,14 @@ body {
   display: flex;
   position: fixed;
   flex-direction: column;
-  background-color: grey;
 }
 
-#box {
-  width: 10%;
-  height: 5%;
+.box {
+  width: 100%;
+  height: 3%;
+  margin: 1px;
+}
+span {
   background-color: grey;
 }
 
@@ -29,10 +31,13 @@ a {
   text-decoration: none;
 }
 
-.flexcontainer div:hover {
+.flexcontainer span:hover {
   background-color: #ff0055;
 }
-
+.flexcontainer a:hover{
+  color:#ff0055;
+}
+/*/////////////////////////////////////////////////////*/
 img {
   width: 100%;
 }
@@ -40,5 +45,6 @@ img {
 #dude {
   position: absolute;
   left:300px;
-  width:600px;
+  width:590px;
+  top:-100px;
 }
