--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: yellow;
-  text-align: center;
+  background-color: white;
+  text-align: left;
   margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
@@ -11,13 +11,16 @@ body {
   display: flex;
   position: fixed;
   flex-direction: column;
-  background-color: grey;
 }
 
-#box {
-  width: 10%;
-  height: 5%;
+.box {
+  width: 100%;
+  height: 3%;
+  margin: 1px;
+}
+span {
   background-color: grey;
+
 }
 
 div {
@@ -29,46 +32,58 @@ a {
   text-decoration: none;
 }
 
-.flexcontainer div:hover {
+.flexcontainer span:hover {
   background-color: #ff0055;
 }
+.flexcontainer a:hover{
+  color:#ff0055;
+}
 
+/*/////////////////////////////////////*/
 img {
   width: 100%;
 }
 
 #moth {
   width:600px;
+  left:300px;
   position: absolute;
   z-index: -2;
+  pointer-events: none;
 }
 
 #moon {
 
   width:200px;
-  left:700px;
+  left:900px;
+  top:130px;
   position: absolute;
   z-index: -4;
+  pointer-events: none;
 }
 
 #frog {
   width:600px;
   position: absolute;
-  left: 500px;
+  left: 700px;
   top: 300px;
   z-index: -2;
+  pointer-events: none;
 }
 
 #pinkblock {
   position: absolute;
-  background-color: #ff0055;
-  opacity: 0.5;
+  background-color: grey;
   width:300px;
   height: 400px;
-  left:800px;
+  left:1000px;
   top: 100px;
   overflow:auto;
-  /* z-index: -3; */
+  z-index: -4;
+}
+
+#pinkblock:hover {
+  background-color: #ff0055;
 }
 
 
