--- a/css/page4.css
+++ b/css/page4.css
@@ -16,10 +16,11 @@ body {
 .box {
   width: 100%;
   height: 3%;
-  margin: 1px;
+  margin: 2px;
 }
-span {
+.flexcontainer span {
   background-color: grey;
+  padding: 1px;
 }
 
 div {
