--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,12 @@ body {
 .box {
   width: 100%;
   height: 3%;
-  margin: 1px;
+  margin: 2px;
 }
-span {
+.flexcontainer span {
   background-color: grey;
-
+  padding: 1px;
 }
-
 div {
    /* border: 1px solid red; */
 }
@@ -91,4 +90,20 @@ img {
   position: absolute;
   left:300px;
   width:600px;
+}
+
+.selectDisable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.selectEnable {
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -o-user-select: text;
+    user-select: text;
 }
