--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,12 @@ img {
   left:1000px;
   top: 100px;
   overflow:auto;
-  z-index: -4;
+  z-index: -100;
 }
 
-#pinkblock:hover {
+/* #pinkblock:hover {
   background-color: #ff0055;
-}
+} */
 
 
 #dude {
