--- a/css/page2.css
+++ b/css/page2.css
@@ -95,9 +95,9 @@ img {
   /* animation:fadein 1s ease 0.5s forwards; */
 }
 
-.photobox img {
+/* .photobox img {
   opacity:0;
-}
+} */
 
 /* @keyframes fadein {
   0% {
